--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body id="page-one">
 
   <!-- The empty <nav> below is where the menu is imported -->
   <nav id="menu"></nav>
 
   <main>
-    <h1>Page 2</h1>
+    <h1>Page 1</h1>
   </main>
 
   <!-- the link to the javascript file containing the import code -->
